<resources>
    <string name="app_name">Share Elkheir</string>
    <string name="geo_api_key" translatable="false">AIzaSyDk1AtAQD1St-Jis4JoRL6zR05y266Bbzo</string>
    <string name="facebook_app_id" translatable="false">1737397919878394</string>
    <string name="internet_is_not_connected">Internet is not connected</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="contributions">Contributions</string>
    <string name="sign_up">Sign up</string>
    <string name="something_went_wrong">Something went wrong, please try again</string>
    <string name="capture_picture">Capture picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="explain_storage_permission"><![CDATA[To capture photos allow Share Elkheir to access your device\'s photos, media and files.\nTap settings > Permissions, and turn storage on.]]></string>
    <string name="allow_location_permission"><![CDATA[Allow Share Elkheir to access your Location.\nTap settings > Permissions, and turn location on.]]></string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Invalid password, The password must be at least 6 characters</string>
    <string name="submit">Submit</string>
    <string name="area_needs_help">Area needs help</string>
    <string name="area_is_covered">Area is covered</string>
    <string name="open_location_settings" translatable="false">Open settings</string>
    <string name="cancel">Cancel</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="difficult">Difficult</string>
    <string name="last_contribution">last contribution</string>
    <string name="today_at">Today at</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">Days ago</string>
    <string name="quantity">Quantity</string>
    <string name="accessibility">Accessibility</string>
    <string name="this_area_needs_help">This area needs help</string>
    <string name="this_area_is_covered">This area is covered</string>
    <string name="pick_location">Pick location</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="still_needs_help">Still need help</string>
    <string name="share">Share</string>
    <string name="food_boxes">Food boxes</string>
    <string name="hot_meals">Hot meals</string>
    <string name="gps_network_not_enabled">Location must be enabled to get your location</string>
    <string name="feedback">Feedback</string>
    <string name="action_language">Change language</string>
    <string name="done">Done!</string>
    <string name="share_among_friends">Share the word among friends</string>
    <string name="email_exists">Email is already taken</string>
    <string name="boxes_of_food">boxes of food</string>
    <string name="_hot_meals">hot meals</string>
    <string name="just_contributed">I just contributed with&#160;</string>
    <string name="via_akram">via Share Elkheir</string>
    <string name="join_me">Join me</string>
    <string name="great_job">Thank you for your contribution in helping others with the locations that have already received help and the ones which are still in need.</string>
    <string name="clothes">Clothes</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="invalid_number">Invalid number</string>

</resources>
