<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CustomTextView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <eg.com.theplanet.akram.ui.views.CustomTextView
            android:id="@+id/quantity_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="22sp"
            CustomTextView:fontName="VodafoneRg.ttf" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/quantity_textInputLayout"
            android:layout_below="@id/quantity_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <eg.com.theplanet.akram.ui.views.CustomEditText
                android:id="@+id/quantity_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                CustomTextView:fontName="VodafoneRg.ttf" />
        </android.support.design.widget.TextInputLayout>


        <eg.com.theplanet.akram.ui.views.CustomTextView
            android:id="@+id/safety_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity_textInputLayout"
            android:layout_marginTop="32dp"
            android:text="@string/accessibility"
            android:textSize="22sp"
            CustomTextView:fontName="VodafoneRg.ttf" />


        <eg.com.theplanet.akram.ui.views.CustomTextView
            android:id="@+id/safe_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/safety_title_textView"
            android:layout_marginTop="32dp"
            android:text="@string/easy"
            android:textSize="16sp"
            CustomTextView:fontName="VodafoneRg.ttf" />


        <eg.com.theplanet.akram.ui.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/safety_title_textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/normal"
            android:textSize="16sp"
            CustomTextView:fontName="VodafoneRg.ttf" />

        <eg.com.theplanet.akram.ui.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/safety_title_textView"
            android:layout_marginTop="32dp"
            android:text="@string/difficult"
            android:textColor="@color/red"
            android:textSize="16sp"
            CustomTextView:fontName="VodafoneRg.ttf" />


        <SeekBar
            android:id="@+id/safety_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/safe_textView"
            android:layout_marginTop="32dp" />


        <RelativeLayout
            android:id="@+id/need_help_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/safety_seekBar"
            android:layout_marginTop="32dp">


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/area_condition_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:checked="true" />


            <eg.com.theplanet.akram.ui.views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/area_condition_switch"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/area_condition_switch"
                android:layout_toStartOf="@id/area_condition_switch"
                android:gravity="start|center"
                android:text="@string/still_needs_help"
                android:textSize="18sp"
                CustomTextView:fontName="VodafoneRg.ttf" />

            <eg.com.theplanet.akram.ui.views.CustomTextView
                android:id="@+id/area_condition_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/area_condition_switch"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@id/area_condition_switch"
                android:layout_toRightOf="@id/area_condition_switch"
                android:gravity="end|center"
                android:text="@string/area_needs_help"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                CustomTextView:fontName="VodafoneRg.ttf" />
        </RelativeLayout>

        <eg.com.theplanet.akram.ui.views.CustomTextView
            android:id="@+id/feedback_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/need_help_layout"
            android:layout_marginTop="32dp"
            android:text="@string/feedback"
            android:textSize="22sp"
            CustomTextView:fontName="VodafoneRg.ttf" />

        <eg.com.theplanet.akram.ui.views.CustomEditText
            android:id="@+id/feedback_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback_textView"
            android:inputType="text"
            CustomTextView:fontName="VodafoneRg.ttf" />

    </RelativeLayout>
</ScrollView>
