<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:CustomTextView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <include layout="@layout/power_by_vodafone"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email">

        <eg.com.theplanet.akram.ui.views.CustomEditText
            CustomTextView:fontName="VodafoneRg.ttf"
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_inputLayout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password">

        <eg.com.theplanet.akram.ui.views.CustomEditText
            CustomTextView:fontName="VodafoneRg.ttf"
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <eg.com.theplanet.akram.ui.views.CustomButton
        CustomTextView:fontName="VodafoneRg.ttf"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_inputLayout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:theme="@style/AppTheme.Button" />

    <eg.com.theplanet.akram.ui.views.CustomButton
        CustomTextView:fontName="VodafoneRg.ttf"
        android:id="@+id/login_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/login_with_facebook"
        android:theme="@style/AppTheme.FacebookButton" />


    <eg.com.theplanet.akram.ui.views.CustomButton
        CustomTextView:fontName="VodafoneRg.ttf"
        android:theme="@style/AppTheme.Button"
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_with_facebook"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

</RelativeLayout>