<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CustomTextView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/powered_by_vodafone" />

    <ImageButton
        android:id="@+id/add_photo_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/bg_add_photo"
        android:onClick="addPhoto"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add_photo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_photo_button"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/name">

        <eg.com.theplanet.akram.ui.views.CustomEditText
            CustomTextView:fontName="VodafoneRg.ttf"
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_inputLayout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/email">

        <eg.com.theplanet.akram.ui.views.CustomEditText
            CustomTextView:fontName="VodafoneRg.ttf"
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_inputLayout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password">

        <eg.com.theplanet.akram.ui.views.CustomEditText
            CustomTextView:fontName="VodafoneRg.ttf"
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <eg.com.theplanet.akram.ui.views.CustomButton
        CustomTextView:fontName="VodafoneRg.ttf"
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_inputLayout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:theme="@style/AppTheme.Button" />


</RelativeLayout>